[package]
name = "rust_jsonl_async"
version = "0.1.0"
authors = ["venantvr <venantvr@gmail.com>"]
description = "Une librairie Rust thread-safe et asynchrone pour écrire dans des fichiers JSON Lines (.jsonl)."
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
# Pour le logging
log = "0.4"
# Canal MPSC haute performance et borné (pour la contre-pression)
crossbeam-channel = "0.5.13"
# Pour la sérialisation/désérialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SmallVec pour éviter allocations heap sur petits vecteurs
smallvec = "1.13"

[dev-dependencies]
# Une implémentation simple de 'log' pour les tests/exemples
env_logger = "0.11.3"
# Pour les fichiers temporaires dans les tests
tempfile = "3.23.0"
# Pour créer des objets JSON de test
serde_json = "1.0"